# hierarchical-web-tree-snap

./: .ghci  .gitignore  LICENSE  README.md  hierarchical-web-tree-snap.cabal
ghci_only/: Paths_hierarchical_web_tree_snap.hs
src/Web/: Main.hs  TreeController.hs  TreeModel.hs
static/css/: custom.css
templates/: home.tpl  tree.tpl  tree_node.tpl
